# termprep

./: .env.example  .gitignore  Dockerfile  README.md  ai-test-report.md  ai-test-terms.csv  ai-test-terms.json  formattest-report.md  index.html  medicaltest-report.md  pyproject.toml  render.yaml  requirements.txt  test_sample.txt  testproject-report.md  web_entry.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: FUNCTIONAL_BLUEPRINT.md  index.html
termprep/: __init__.py  __main__.py  analyzer.py  cli.py  db.py  exporter.py  extractor.py  pipeline.py  report.py  searcher.py
termprep/sources/: __init__.py  base.py  webster.py  wikipedia.py  youdao.py
termprep/web/: __init__.py  server.py
tests/: test_analyzer.py  test_db.py  test_exporter.py  test_extractor.py  test_pipeline.py  test_report.py  test_searcher.py  test_sources.py  test_wikipedia.py
web/static/: index.html
