[project]
name = "termprep"
version = "0.1.0"
description = "\u8bd1\u524d\u672f\u8bed\u51c6\u5907\u5de5\u5177 - \u81ea\u52a8\u641c\u7d22\u5173\u8054\u8bcd\u6c47\uff0c\u8f85\u52a9\u7ffb\u8bd1\u51c6\u5907\u5de5\u4f5c"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "rich>=13.0",
    "click>=8.1",
    "jieba>=0.42",
]

[project.scripts]
termprep = "termprep.cli:main"

[tool.setuptools.packages.find]
include = ["termprep", "termprep.*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
